src/test/contracts/negative/interpreter_tests/test_run_types.jsligo
import Test = Test.Next;

const foo = (x: {field: int}): {field: int} => {return x};
const bar = Test.Michelson.run(foo, {property: "toto"});
